<resources>
    <string name="app_name">sophos-mobile-app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_data">Enter your data to access</string>
    <string name="login">Login</string>
    <string name="login_fingerprint">Enter with fingerprint</string>
    <string name="send_docs">Send documents</string>
    <string name="see_docs">See documents</string>
    <string name="offices">Offices</string>
    <string name="mode">Mode</string>
    <string name="language">Language</string>
    <string name="welcome">Welcome</string>
    <string name="options_for_you">These are the options we have for you</string>
    <string name="enter">Enter</string>
    <string name="document">Document</string>
    <string name="send">Send</string>
    <string name="document_number">Document number</string>
    <string name="names">Names</string>
    <string name="lastnames">Lastnames</string>
    <string name="document_delivery">Document delivery</string>
    <string name="documents">Documents</string>
    <string name="go_back">Return</string>
    <string name="select_picture_option">What do you prefer?</string>
    <string name="select_from_gallery">Select photo from gallery</string>
    <string name="capture_photo_from_gallery">Capture photo from camera</string>
    <string name="capture_button">Capture button</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="photo_saved">Photo saved successfully</string>
    <string name="city">City</string>
    <string name="doc_number_requirement">Document number is required</string>
    <string name="email_requirement">Email field is required</string>
    <string name="id_type_requirement">You must select a doc type</string>
    <string name="attached_type_requirement">Attached type field is required</string>
    <string name="name_requirement">Name field is required</string>
    <string name="lastname_requirement">Lastname field is required</string>
    <string name="city_requirement">You must select a city</string>
    <string name="add_photo_requirement">You must attach a photo or image</string>
    <string name="image_saved">Image saved successfully</string>
    <string name="logout">Logout</string>
    <string name="fingerprint_auth">Authenticate with fingerprint</string>
    <string name="use_biometric_as_authentication">Log in using your biometric credential</string>
    <string name="use_password_auth">Use account password instead</string>
    <string name="email_not_empty">Email can\'t be empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_not_empty">Password can\'t be empty</string>
    <string name="request_rationale_permission">%s permission was denied previously. Please go to app settings and activate the permission manually</string>
    <string name="permission_denied_format">%s permission was denied</string>
    <string name="camera_permission">Camera permission</string>
    <string name="read_external_permission">Read external</string>
    <string name="maps_permission">Location</string>
    <string name="location_permission">Location</string>
    <string name="grant_permission">Grant permission</string>
    <string name="main_menu">Main menu</string>
    <string name="auth_with_password_first">You must authenticate with password first</string>
    <string name="day_mode">Day mode</string>
    <string name="night_mode">Night mode</string>
    <string name="doc_type_title">Doc type</string>
    <string name="add_new_doc_success">Document added successfully</string>
    <string name="add_new_doc_failed">Document could not be uploaded </string>
    <string name="network_error">Network error</string>
    <string name="unknown_host_exception">Unknown host exception</string>
    <string name="error_message">There was an error!</string>
    <string name="authentication_success">Authentication success</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="no_image_attached">No image attached</string>
    <string name="invalid_email_or_password">Wrong email or password</string>

    <string-array name="doc_type">
        <item>Doc type</item>
        <item>CC</item>
        <item>TI</item>
        <item>PA</item>
        <item>CE</item>
    </string-array>

    <!--
    <string name="history"><big><font face="@font/montserrat_bold" color="#FE0FE0">History</font></big></string>
-->

</resources>