<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">


    <ImageButton
        android:id="@+id/ib_accept_photo"
        android:layout_width="@dimen/round_button_medium"
        android:layout_height="@dimen/round_button_medium"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_outer_circle"
        android:contentDescription="@string/accept"
        android:padding="@dimen/spacing_small"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <ImageButton
        android:id="@+id/ib_take_photo"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/ic_baseline_camera_alt_24"
        android:contentDescription="@string/capture_button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageButton
        android:id="@+id/ib_cancel_photo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_outer_circle"
        android:contentDescription="@string/cancel"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_baseline_clear_24" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginTop="1dp"
        android:layout_marginBottom="302dp"
        app:layout_constraintBottom_toTopOf="@+id/ib_take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>