<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SendDocumentsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_document_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_topbar" />


    <TextView
        android:id="@+id/tv_document_screen_doc_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Document delivery"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_document_screen" />

    <ImageView
        android:id="@+id/iv_document_screen_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scaleX="-1"
        android:src="@drawable/ic_outline_add_a_photo_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_document_screen_doc_delivery" />

    <Spinner
        android:id="@+id/sp_document_screen_doc_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_document_screen_add_photo" />

    <EditText
        android:id="@+id/etv_document_screen_doc_number"
        style="@style/document_input_data"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:drawablePadding="24dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_outline_badge_24"
        android:inputType="textPersonName"
        android:hint="@string/document_number"
        app:layout_constraintEnd_toEndOf="@+id/sp_document_screen_doc_type"
        app:layout_constraintStart_toStartOf="@+id/sp_document_screen_doc_type"
        app:layout_constraintTop_toBottomOf="@+id/sp_document_screen_doc_type" />

    <EditText
        android:id="@+id/etv_document_screen_names"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/names"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etv_document_screen_doc_number"
        app:layout_constraintStart_toStartOf="@+id/etv_document_screen_doc_number"
        app:layout_constraintTop_toBottomOf="@+id/etv_document_screen_doc_number" />

    <EditText
        android:id="@+id/etv_document_screen_lastnames"
        style="@style/document_input_data"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastnames"
        app:layout_constraintEnd_toEndOf="@+id/etv_document_screen_names"
        app:layout_constraintStart_toStartOf="@+id/etv_document_screen_names"
        app:layout_constraintTop_toBottomOf="@+id/etv_document_screen_names" />

    <EditText
        android:id="@+id/etv_document_screen_email"
        style="@style/document_input_data"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="jonathan.perez@sophosolutions.com"
        app:layout_constraintEnd_toEndOf="@+id/etv_document_screen_lastnames"
        app:layout_constraintStart_toStartOf="@+id/etv_document_screen_lastnames"
        app:layout_constraintTop_toBottomOf="@+id/etv_document_screen_lastnames" />

    <Spinner
        android:id="@+id/sp_document_screen_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/etv_document_screen_email"
        app:layout_constraintTop_toBottomOf="@+id/etv_document_screen_email"
        app:layout_constraintEnd_toEndOf="@id/etv_document_screen_email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_document_screen_upload_doc"
        android:layout_width="170dp"
        android:fontFamily="@font/montserrat_bold"
        android:layout_height="40dp"
        android:paddingStart="8dp"
        android:background="@drawable/background_button_rounded"
        android:layout_marginTop="56dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/document"
        android:drawableStart="@drawable/ic_outline_backup_24"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/sp_document_screen_city"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sp_document_screen_city"
        app:layout_constraintTop_toBottomOf="@+id/sp_document_screen_city" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_document_screen_send"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?attr/colorAccent"
        android:background="@drawable/background_button_rounded"
        android:text="@string/send"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/sp_document_screen_city"
        app:layout_constraintStart_toStartOf="@+id/sp_document_screen_city"
        app:layout_constraintTop_toBottomOf="@+id/btn_document_screen_upload_doc" />


</androidx.constraintlayout.widget.ConstraintLayout>